# rs-sql-db

./: .gitignore  Cargo.toml  LICENSE  README.md  sss.db  student.db  user.db  user.frm
assets/: sss.db  user.frm
ffi/: hello.c  test.c
src/: lib.rs  main.rs
src/bptree/: bptree.rs  insert.rs  mod.rs
src/core/: builder.rs  mod.rs  page.rs  pagemanager.rs  row.rs  rowmanager.rs
src/http/: client.rs
src/manager/: mod.rs
src/parse/: parser.rs  token.rs
src/parser/: parser.rs  token.rs
src/tree/: insert.rs  insert2.rs  mod.rs
