[package]
name = "lists"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.5"
error-chain = "0.12"

serde = {version = "1.0", features = ["rc"]}
serde_json = "1.0"
serde_derive = "1.0"

clap = "2.33"

bit = "0.1"